--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -36,7 +36,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
         
       # azure ubuntu repo can be flaky so add an alternate source
-      - if: runner.os == 'ubuntu-latest'
+      - name: possible workaround
         run: sed -e 's/azure.archive.ubuntu.com/us.archive.ubuntu.com/g' -e t -e d /etc/apt/sources.list | sudo tee /etc/apt/sources.list.d/nonazure.list
 
       - name: Create Resource Group, Shared Image Gallery, Image Definition, VNet and Subnet
