--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -66,7 +66,7 @@ jobs:
       #   run: packer build -color=false -timestamp-ui /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json
 
       - name: Create the Master VM
-        run: az vm create -g "$RESOURCE_GROUP" -n "$VM_NAME" --image "$IMAGE_NAME" --public-ip-address "$PUBLIC_IP_NAME" --subnet "$SUBNET_NAME" --vnet-name "$VNET_NAME" --ssh-key-values @/home/runner/.ssh/azmanagers_rsa.pub @/home/runner/work/AzManagers.jl/AzManagers.jl/mcpu-key.pub --admin-username cvx
+        run: az vm create -g "$RESOURCE_GROUP" -n "$VM_NAME" --image "UbuntuLTS" --public-ip-address "$PUBLIC_IP_NAME" --subnet "$SUBNET_NAME" --vnet-name "$VNET_NAME" --ssh-key-values @/home/runner/.ssh/azmanagers_rsa.pub @/home/runner/work/AzManagers.jl/AzManagers.jl/mcpu-key.pub --admin-username cvx
 
       # could use detach functionality from AzManagers in place of ssh here
       - name: Run the Unit Tests on the Master VM
