--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -12,7 +12,7 @@ jobs:
     env:
       TENANT_ID: "${{ secrets.TENANT_ID }}" 
       SUBSCRIPTION_ID: "${{ secrets.SUBSCRIPTION_ID }}"
-      LOCATION: "southcentralus"
+      LOCATION: "eastus2"
       RESOURCE_GROUP: "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
       CLIENT_ID: "${{ secrets.CLIENT_ID }}"
       CLIENT_SECRET: "${{ secrets.CLIENT_SECRET }}"
