--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -40,12 +40,14 @@ jobs:
 
       - name: Create Resource Group, Shared Image Gallery, Image Definition, VNet and Subnet
         run: |
-          az group create                -g "$RESOURCE_GROUP" -l "$LOCATION"
-          az group wait                  -g "$RESOURCE_GROUP" --created 
-          az sig create                  -g "$RESOURCE_GROUP" -r "$GALLERY_NAME"
-          az sig image-definition create -g "$RESOURCE_GROUP" -r "$GALLERY_NAME" -i "$IMAGE_NAME" -p "canonical" -f "0001-com-ubuntu-server-focal" -s "20_04-lts" --os-type linux
-          az network vnet create         -g "$RESOURCE_GROUP" -n "$VNET_NAME" --subnet-name "$SUBNET_NAME"
-          az identity create             -g "$RESOURCE_GROUP" -n "$IDENTITY_NAME"
+          az group create                  -g "$RESOURCE_GROUP" -l "$LOCATION"
+          az group wait                    -g "$RESOURCE_GROUP" --created 
+          az sig create                    -g "$RESOURCE_GROUP" -r "$GALLERY_NAME"
+          az sig image-definition create   -g "$RESOURCE_GROUP" -r "$GALLERY_NAME" -i "$IMAGE_NAME" -p "canonical" -f "0001-com-ubuntu-server-focal" -s "20_04-lts" --os-type linux
+          az network vnet create           -g "$RESOURCE_GROUP" -n "$VNET_NAME" --subnet-name "$SUBNET_NAME"
+          az identity create               -g "$RESOURCE_GROUP" -n "$IDENTITY_NAME"
+          $ID_CLIENT_ID=$(az identity show -g "$RESOURCE_GROUP" -n "$IDENTITY_NAME" | grep "clientId" | cut -c16- | tr -d '",')
+          az role assignment create --assignee $ID_CLIENT_ID --role Contributor --scope "/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP"
 
       - name: Template the Packer Image file
         uses: cuchi/jinja2-action@v1.2.0
