--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -52,6 +52,7 @@ jobs:
           echo "HELLO: $ID_CLIENT_ID2"
           az account show
           az login --service-principal -u 7f4e2cd1-20a8-47fd-ab49-d3df30121c9a -p "$CLIENT_SECRET" --tenant fd799da1-bfc1-4234-a91c-72b3a1cb9e26
+          pause 2
           az role assignment create --assignee-object-id "$ID_CLIENT_ID" --role "Contributor" --scope "/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP"
 
       - name: Template the Packer Image file
